<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/fullSummaryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="12dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/fullSummaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_summary"
            android:textSize="16sp" />
    </ScrollView>

    <TextView
        android:id="@+id/btnCloseSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textColor="#000000"
        android:background="@drawable/btn_transparent_border"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
